--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.55.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1"
   }
 }
