--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -91,7 +91,7 @@ jobs:
         with:
           bucket: ${{ secrets.AWS_S3_PRODUCTION_BUCKET }}
           base-path: ${{ steps.get-slug.outputs.result }}
-          dir: .next
+          dir: out
           should-cache: true
           use-accelerate-endpoint: false
           public: true
