--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           bucket: ${{ secrets.AWS_S3_STAGING_BUCKET }}
           base-path: ${{ steps.delivery-path-prefix.outputs.result }}
-          dir: .next
+          dir: out
           should-cache: true
           use-accelerate-endpoint: false
           public: true
